styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    overflow-x: hidden;
}

body{
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    height: 100vh;
    width: 100vw;
    background-color: #333;
}

.active{
    display: block;
}
.inactive{
    display: none;
}
.container{
    width: 100vw;
    /* height: 100vh; */
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin: auto;
    background-color: #fff;
    padding: 50px;
}

.article{
    position: relative;
    width: 70%;
}

.round-container{
position:fixed;
top: -100;
left: -100;
/* left: 0; */
}

.round{
    width: 100px;
    height: 100px;
    background-color: brown;
    border-radius: 0px 0px 90px;
    position: relative;
}

button{
    position: absolute;
    left:35%;
    top: 40%;
    /* Style */
    background-color: transparent;
    border: none;
    font-size: 1.4rem;
    color: white;
    cursor: pointer;
}

#close {
    transition: transform 0.8s ease-in-out;
}

.btn-active {
    transform: translateX(-100px);
}



.content{
    /* Tranforming Layer */
    width: 100vw;
    min-height: 100vh;
    transform-origin: top left;

    /* Transition */
    transition: transform 1s ease-in;
}
.shownav{
    transform: rotate(-20deg);
}

#open{
    transition: opacity 0.5s ease-in;
}

#close{
    transition: opacity 0.5s ease-in;
}

.vanish{
    opacity: 0;
    /* pointer-events: none; */
}


nav{
    position: absolute;
    bottom: 50px;
    /* left: -10px; */
    animation: move-in 1s ease-in;
    animation-fill-mode: forwards;
}

.move-out{
    animation: move-out 1s ease-in;
}


nav ul{
    padding: 10px;
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    align-items: center;
    /* Style */
    list-style: none;
}

nav li{
    margin:10px 0;
    font-size: 1.5rem;
    /* padding:10px; */
    color: #fff;
    text-transform: uppercase;

    display: flex;
    align-items: center;
}

nav li i{
    /* width: 40%; */
    font-size: 1.25rem;
    margin-right: 5px;
    overflow: hidden;
}

nav li:nth-child(2){
    margin-left: 50px;
}

nav li:nth-child(3){
    margin-left: 150px;
}



@keyframes move-in {
    0%{
        left: -200px;
    }

    100%{
        left:-50px;
    }
}


@keyframes move-out {
    0%{
        left: -50px;
    }

    100%{
        left: -200px
    }
}


.article sub{
    color:gray;
    font-style: italic;
}

.article .info{
    margin-top: 10px;
    line-height: 1.5;
    text-align: justify;

}

.article h3{
    margin: 20px 0px;
}

.article .review{
    margin-top: 20px;
    text-align: justify;
}

.nav-vanish{

}

